# telegram-watch

./: .gitignore  ACCEPTANCE.md  AGENTS.md  CLAUDE.md  LICENSE  README.ja.md  README.md  README.zh-Hans.md  README.zh-Hant.md  SPEC.md  config.example.toml  launch_tgwatch.bat  launch_tgwatch.command  pyproject.toml
.codex/skills/telegram-watch-dev/: SKILL.md
docs/: CHANGELOG.ja.md  CHANGELOG.md  CHANGELOG.zh-Hans.md  CHANGELOG.zh-Hant.md  README.ja.md  README.zh-Hans.md  README.zh-Hant.md  WORKFLOW.md  configuration.ja.md  configuration.md  configuration.zh-Hans.md  configuration.zh-Hant.md
docs/requests/: REQ-20260117-001-mvp-bootstrap.md  REQ-20260117-002-config-docs.md
docs/templates/: REQ_TEMPLATE.md
telegram_watch/: __init__.py  cli.py  config.py  doctor.py  gui.py  links.py  migration.py  notifications.py  reporting.py  runner.py  storage.py  timeutils.py
tests/: test_cli.py  test_config.py  test_gui_runner.py  test_migration.py  test_runner.py  test_storage.py
tgwatch/: __init__.py  __main__.py
